--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
 <body>
     
     <header>
-
-        <div class="menu">
+        <div class="header">
             <img src="img/logo.png" alt="Logo Pâtisserie Grandin">
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="#textS1">Qui sommes-nous?</a></li>
-                <li><a href="#">Menu</a></li>
+                <li><a href="#Menu">Menu</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <div class="socialLinks">
@@ -91,18 +90,20 @@
         </div>
 
 
-        <div class="menu">
-            
-        </div>
-
-
-        <div class="contact">
-
+        <div class="menu" id="Menu">
+            <h1>Notre menu</h1>
         </div>
 
     </main>
 
-    </section>
+    <footer>
+        <div class="contact">
+            <h1>Contact</h1>
+            <p>Adresse : 38 Rue au Pain, 78100 Saint-Germain-en-Laye</p>
+            <p>Téléphone : 01 34 51 00 00</p>
+            <p>Horaires : 7h30 - 19h30</p>
+        </div>
+    </footer>
 
     <script src="main.js"></script>
 
