--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     
     <header>
-        <div class="header">
+        <div class="header" id="head">
             <img src="img/logo.png" alt="Logo Pâtisserie Grandin">
             <ul>
-                <li><a href="index.html">Accueil</a></li>
+                <li><a href="#head">Accueil</a></li>
                 <li><a href="#textS1">Qui sommes-nous?</a></li>
                 <li><a href="#Menu">Menu</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#Footer">Contact</a></li>
             </ul>
             <div class="socialLinks">
                 <a href="https://www.facebook.com/MickaelMassetGrandin/"><img src="img/facebook.png" alt="Facebook"></a>
@@ -96,13 +96,17 @@
 
     </main>
 
-    <footer>
+    <footer class="footer" id="Footer">
         <div class="contact">
             <h1>Contact</h1>
             <p>Adresse : 38 Rue au Pain, 78100 Saint-Germain-en-Laye</p>
             <p>Téléphone : 01 34 51 00 00</p>
             <p>Horaires : 7h30 - 19h30</p>
         </div>
+
+        <a href="#head" id="scroll_to_top" class="top">
+            <img src="img/top.png" alt="Retour en haut">
+        </a>
     </footer>
 
     <script src="main.js"></script>
