modif footer p + css

--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
     <footer class="footer" id="Footer">
         <div class="contact">
             <h1>Contact</h1>
-            <p>Adresse : 38 Rue au Pain, 78100 Saint-Germain-en-Laye</p>
-            <p>Téléphone : 01 34 51 00 00</p>
-            <p>Horaires : 7h30 - 19h30</p>
+            <p>Adresse : 13 Rue au Pain, 78100 Saint-Germain-en-Laye</p>
+            <p>Téléphone : 01 34 51 00 56</p>
+            <p>Email : chocochef92@yahoo.fr</p>
+            <p>Horaires : Ouvert du mercredi au dimanche</p>
         </div>
 
         <a href="#head" id="scroll_to_top" class="top">
