add footer text + menu

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="#head">Accueil</a></li>
                 <li><a href="#textS1">Qui sommes-nous?</a></li>
-                <li><a href="#Menu">Menu</a></li>
+                <li><a href="#Sale">Nos plats salés</a></li>
                 <li><a href="#Footer">Contact</a></li>
             </ul>
             <div class="socialLinks">
@@ -90,20 +90,59 @@
         </div>
 
 
-        <div class="menu" id="Menu">
-            <h1>Notre menu</h1>
+        <div class="menu" id="Sale">
+            <h1>Retrouvez également nos plats salés</h1>
+
+            <p>
+                Chaque semaine, découvrez nos plats cuisinés 
+                faits maison en boutique.
+                <br><br>
+                Nous accordons une importance particulière 
+                à l'utilisation d'ingrédients de première 
+                qualité, rigoureusement sélectionnés <br> auprès 
+                de producteurs locaux. Notre engagement est 
+                de vous offrir une expérience culinaire à 
+                la fois saine et délicieuse.
+            </p>
+
+            <div class="plats">
+                <img src="img/feuillete.jpg" alt="">
+                <img src="img/salade.jpg" alt="">
+                <img src="img/tomates.jpg" alt="">
+            </div>   
         </div>
 
     </main>
 
     <footer class="footer" id="Footer">
-        <div class="contact">
-            <h1>Contact</h1>
-            <p>Adresse : 13 Rue au Pain, 78100 Saint-Germain-en-Laye</p>
-            <p>Téléphone : 01 34 51 00 56</p>
-            <p>Email : chocochef92@yahoo.fr</p>
-            <p>Horaires : Ouvert du mercredi au dimanche</p>
+        <div class="infos">
+            <div class="contact">
+                <h1>Contact</h1>
+                <p>Adresse : 13 Rue au Pain, 78100 Saint-Germain-en-Laye</p>
+                <p>Téléphone : 01 34 51 00 56</p>
+                <p>Email : chocochef92@yahoo.fr</p>
+                <p>Nous sommes ouvert du mardi au dimanche</p>
+            </div>
+
+            <div class="horaires">
+                <p>
+                    Lundi : Fermé
+                    <br>
+                    Mardi : 8h30 - 19h00
+                    <br>
+                    Mercredi : 8h30 - 19h00
+                    <br>
+                    Jeudi : 8h30 - 19h00
+                    <br>
+                    Vendredi : 8h30 - 19h00
+                    <br>
+                    Samedi : 8h30 - 19h00
+                    <br>
+                    Dimanche : 8h30 - 13h00
+                </p>
+            </div>
         </div>
+            
 
         <a href="#head" id="scroll_to_top" class="top">
             <img src="img/top.png" alt="Retour en haut">
