modif css menu/footer/firstSection

--- a/index.html
+++ b/index.html
@@ -94,8 +94,12 @@
             <h1>Retrouvez également nos plats salés</h1>
 
             <p>
+                Nous réalisons toute une gamme traiteur 
+                pour vos repas à emporter mais également 
+                pour vos célébrations.
+                <br><br>
                 Chaque semaine, découvrez nos plats cuisinés 
-                faits maison en boutique.
+                faits maison en boutique ainsi que nos différents plats du jour.
                 <br><br>
                 Nous accordons une importance particulière 
                 à l'utilisation d'ingrédients de première 
